package Ejercicio1;

public class ElementoSimple extends Elemento{
    public ElementoSimple(int codigo, double precio) {
        super(codigo, precio);
    }
}
