@startuml
abstract class Elemento {
    - codigo: int
    - precio: double

    + Elemento(codigo: int, precio: double)
    + getCodigo(): int
    + getPrecio(): double
}

class ElementoSimple {
    + ElementoSimple(codigo: int, precio: double)
}

class Kit {
    - elementos: List<Elemento>

    + Kit(codigo: int)
    + agregarElemento(elemento: Elemento): void
    + calcularPrecio(): double
}
Elemento <|-- ElementoSimple
Elemento <|-- Kit

@enduml
